fixing scrollbar

--- a/src/components/shared/navbar/cart/styles/cartItem.css
+++ b/src/components/shared/navbar/cart/styles/cartItem.css
@@ -1,8 +1,8 @@
 .cart__card {
     display: grid;
-    grid-template-columns: 0.5fr 1fr;
+    grid-template-columns: 80px 158px;
     column-gap: 1rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.7rem;
 }
 
 .cart__box {
