--- a/src/components/shared/navbar/styles/cart.css
+++ b/src/components/shared/navbar/styles/cart.css
@@ -1,7 +1,7 @@
 .cart-modal {
     position: fixed;
     right: -300px;
-    top: 60px;
+    top: 57px;
     bottom: 0;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     width: 300px;
@@ -23,6 +23,16 @@
 
 .cart-products-container {
     flex: 1;
+    overflow: auto;
+}
+
+.cart-products-container::-webkit-scrollbar {
+    width: 7px;
+}
+
+.cart-products-container::-webkit-scrollbar-thumb {
+    background: #dcd9d9;
+    border-radius: 10px;
 }
 
 .cart-products__h4 {
@@ -66,6 +76,6 @@
 
 @media (min-width: 992px) {
     .cart-modal {
-        top: 70px;
+        top: 67px;
     }
 }
